--- a/package.json
+++ b/package.json
@@ -1,33 +1,58 @@
 {
-  "name": "ontaine-rroll",
-  "version": "1.0.0",
-  "private": true,
-  "description": "ontaine-rroll",
-  "author": "MS097501",
-  "keywords": [
-    "gatsby"
-  ],
-  "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean"
-  },
-  "dependencies": {
-    "babel-plugin-styled-components": "^2.0.7",
-    "gatsby": "^4.18.0",
-    "gatsby-plugin-image": "^2.18.0",
-    "gatsby-plugin-manifest": "^4.18.0",
-    "gatsby-plugin-react-helmet": "^5.18.0",
-    "gatsby-plugin-sharp": "^4.18.0",
-    "gatsby-plugin-sitemap": "^5.18.0",
-    "gatsby-plugin-styled-components": "^5.18.0",
-    "gatsby-source-filesystem": "^4.18.0",
-    "gatsby-transformer-sharp": "^4.18.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-helmet": "^6.1.0",
-    "styled-components": "^5.3.5"
-  }
+	"name": "container-roll",
+	"version": "1.0.0",
+	"private": true,
+	"description": "container-roll",
+	"author": "Nick_Lvovich",
+	"keywords": [
+		"gatsby"
+	],
+	"scripts": {
+		"develop": "gatsby develop",
+		"start": "gatsby develop",
+		"build": "gatsby build",
+		"serve": "gatsby serve",
+		"clean": "gatsby clean",
+		"lint": "eslint . --fix --max-warnings=0",
+		"format": "prettier . --write"
+	},
+	"dependencies": {
+		"@date-io/core": "^2.14.0",
+		"@date-io/date-fns": "^2.14.0",
+		"@emotion/react": "^11.9.3",
+		"@emotion/styled": "^11.9.3",
+		"@material-ui/core": "^4.12.4",
+		"@material-ui/pickers": "^3.3.10",
+		"@mui/material": "^5.9.0",
+		"@mui/styles": "^5.9.0",
+		"@mui/x-date-pickers": "^5.0.0-beta.0",
+		"babel-plugin-styled-components": "^2.0.7",
+		"date-fns": "^2.28.0",
+		"eslint": "^8.20.0",
+		"final-form": "^4.20.7",
+		"gatsby": "^4.18.0",
+		"gatsby-plugin-image": "^2.18.0",
+		"gatsby-plugin-manifest": "^4.18.0",
+		"gatsby-plugin-prettier-eslint": "^1.0.6",
+		"gatsby-plugin-react-helmet": "^5.18.0",
+		"gatsby-plugin-sharp": "^4.18.0",
+		"gatsby-plugin-sitemap": "^5.18.0",
+		"gatsby-plugin-styled-components": "^5.18.0",
+		"gatsby-source-filesystem": "^4.18.0",
+		"gatsby-transformer-sharp": "^4.18.0",
+		"mui-rff": "^5.3.1",
+		"prettier": "^2.7.1",
+		"react": "^18.1.0",
+		"react-dom": "^18.1.0",
+		"react-final-form": "^6.5.9",
+		"react-helmet": "^6.1.0",
+		"react-phone-input-2": "^2.15.1",
+		"react-spring": "^9.5.0",
+		"styled-components": "^5.3.5",
+		"styled-components-carousel": "^0.2.0",
+		"swiper": "^8.3.1"
+	},
+	"devDependencies": {
+		"eslint-plugin-react": "^7.30.1"
+	}
 }
