--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
 		"babel-plugin-styled-components": "^2.0.7",
 		"date-fns": "^2.28.0",
 		"eslint": "^8.20.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsx-a11y": "^6.6.1",
 		"final-form": "^4.20.7",
 		"gatsby": "^4.18.0",
 		"gatsby-plugin-image": "^2.18.0",
