--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"swiper": "^8.3.1"
 	},
 	"devDependencies": {
-		"eslint-plugin-react": "^7.30.1"
+		"eslint-plugin-react": "^7.30.1",
+		"gatsby-plugin-favicons": "^2.0.0"
 	}
 }
