--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"dependencies": {
 		"@date-io/core": "^2.14.0",
 		"@date-io/date-fns": "^2.14.0",
+		"@emailjs/browser": "^3.6.2",
 		"@emotion/react": "^11.9.3",
 		"@emotion/styled": "^11.9.3",
 		"@material-ui/core": "^4.12.4",
@@ -26,6 +27,7 @@
 		"@mui/material": "^5.9.0",
 		"@mui/styles": "^5.9.0",
 		"@mui/x-date-pickers": "^5.0.0-beta.0",
+		"@reach/router": "^1.3.4",
 		"babel-plugin-styled-components": "^2.0.7",
 		"date-fns": "^2.28.0",
 		"eslint": "^8.20.0",
@@ -50,6 +52,7 @@
 		"react-dom": "^18.1.0",
 		"react-final-form": "^6.5.9",
 		"react-helmet": "^6.1.0",
+		"react-intl": "^6.1.0",
 		"react-phone-input-2": "^2.15.1",
 		"react-spring": "^9.5.0",
 		"styled-components": "^5.3.5",
